fix: aligning in tablet doesn't get inherited in mobile

--- a/src/styles/editor-breakpoints.scss
+++ b/src/styles/editor-breakpoints.scss
@@ -19,6 +19,12 @@
 		@content;
 	}
 }
+@mixin tablet-mobile {
+	.stk-preview-device-tablet,
+	.stk-preview-device-mobile {
+		@content;
+	}
+}
 @mixin mobile {
 	.stk-preview-device-mobile {
 		@content;
